--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>spring-boot-web-jsp</artifactId>
+	<artifactId>CoinSearchEngine</artifactId>
 	<packaging>war</packaging>
 	<name>Assessment</name>
 	<description>Assessment</description>
