Changed to https ssl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.mvc.view.prefix: /
 spring.mvc.view.suffix: .html
+
+server.port: 8080
+server.ssl.key-store: keystore.p12
+server.ssl.key-store-password: coinassessment
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
