--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ address_records/
 node_modules/
 my_progress/
 mvnw*
-src/main/resources/static/
+src/main/resources/static/*
+!src/main/resources/static/favicon.ico
